[gd_scene load_steps=20 format=2]

[ext_resource path="res://coollogo_com-29310573.png" type="Texture" id=1]
[ext_resource path="res://new_game.png" type="Texture" id=2]
[ext_resource path="res://newGameButton.gd" type="Script" id=3]
[ext_resource path="res://GUI/LevelSelect.png" type="Texture" id=4]
[ext_resource path="res://LevelSelection.gd" type="Script" id=5]
[ext_resource path="res://credits.png" type="Texture" id=6]
[ext_resource path="res://OptionsButton.gd" type="Script" id=7]
[ext_resource path="res://quitgame.png" type="Texture" id=8]
[ext_resource path="res://QuitGame.gd" type="Script" id=9]
[ext_resource path="res://GUI/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://version.png" type="Texture" id=11]
[ext_resource path="res://GUI/link.png" type="Texture" id=12]
[ext_resource path="res://Player.tscn" type="PackedScene" id=13]
[ext_resource path="res://floortile.tres" type="TileSet" id=14]
[ext_resource path="res://DirtAutoTile.tres" type="TileSet" id=15]
[ext_resource path="res://Game/CompleteWorld.tscn" type="PackedScene" id=16]
[ext_resource path="res://Game/CompleteWorld.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 10 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/HBoxContainer"]
margin_right = 511.0
margin_bottom = 600.0

[node name="Title" type="TextureRect" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_right = 511.0
margin_bottom = 97.0
texture = ExtResource( 1 )

[node name="Menu Options" type="VBoxContainer" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 511.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="NewGameButton" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 39.0
margin_right = 511.0
margin_bottom = 139.0
icon = ExtResource( 2 )
script = ExtResource( 3 )
mouse_out = Color( 0.854902, 0.854902, 0.854902, 1 )
mouse_over = Color( 0.305882, 0.921569, 0.0235294, 1 )

[node name="LevelSelection" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 144.0
margin_right = 511.0
margin_bottom = 225.0
icon = ExtResource( 4 )
script = ExtResource( 5 )
mouse_out = Color( 0.854902, 0.854902, 0.854902, 1 )
mouse_over = Color( 0.901961, 0.866667, 0.0196078, 1 )

[node name="CreditsButton" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 230.0
margin_right = 511.0
margin_bottom = 330.0
icon = ExtResource( 6 )
script = ExtResource( 7 )
mouse_out = Color( 0.854902, 0.854902, 0.854902, 1 )
mouse_over = Color( 0.0156863, 0.109804, 0.870588, 1 )

[node name="QuitGame" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 335.0
margin_right = 511.0
margin_bottom = 435.0
icon = ExtResource( 8 )
script = ExtResource( 9 )
mouse_out = Color( 0.854902, 0.854902, 0.854902, 1 )
mouse_over = Color( 0.94902, 0.0156863, 0.0156863, 1 )

[node name="Version" type="Label" parent="MainMenu/HBoxContainer/VBoxContainer/Menu Options"]
margin_top = 440.0
margin_right = 511.0
margin_bottom = 459.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Version 1.17 @All rigths reserved."

[node name="Other stuffs" type="VBoxContainer" parent="MainMenu/HBoxContainer/VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 519.0
margin_right = 483.0
margin_bottom = 613.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_vertical = 2

[node name="Version" type="TextureRect" parent="MainMenu/HBoxContainer/VBoxContainer/Other stuffs"]
margin_right = 483.0
margin_bottom = 94.0
texture = ExtResource( 11 )

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/HBoxContainer"]
margin_left = 515.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="MainMenu/HBoxContainer/CenterContainer"]
visible = false
margin_left = 74.0
margin_top = 120.0
margin_right = 434.0
margin_bottom = 480.0
texture = ExtResource( 12 )

[node name="Player" parent="MainMenu/HBoxContainer/CenterContainer" instance=ExtResource( 13 )]
position = Vector2( 128.32, 487.291 )

[node name="TileMap" type="TileMap" parent="MainMenu/HBoxContainer/CenterContainer"]
tile_set = ExtResource( 14 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131075, 1, 0, 131076, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 2, 0, 196610, 3, 0, 196615, 1, 0, 196622, 4, 0, 262146, 3, 0, 262158, 4, 0, 327682, 3, 0, 327694, 4, 0, 393218, 3, 0, 393221, 1, 0, 393230, 4, 0, 458754, 3, 0, 458766, 4, 0, 524290, 3, 0, 524295, 1, 0, 524302, 4, 0, 589826, 3, 0, 589838, 4, 0, 655362, 3, 0, 655370, 1, 0, 655374, 4, 0, 720898, 3, 0, 720910, 4, 0, 786434, 3, 0, 786445, 1, 0, 786446, 4, 0, 851970, 3, 0, 851982, 4, 0, 917506, 3, 0, 917515, 1, 0, 917518, 4, 0, 983042, 3, 0, 983054, 4, 0, 1048578, 6, 0, 1048579, 7, 0, 1048580, 7, 0, 1048581, 7, 0, 1048582, 7, 0, 1048583, 7, 0, 1048584, 7, 0, 1048585, 7, 0, 1048586, 7, 0, 1048587, 7, 0, 1048588, 7, 0, 1048589, 7, 0, 1048590, 8, 0 )

[node name="TileMap2" type="TileMap" parent="MainMenu/HBoxContainer/CenterContainer"]
tile_set = ExtResource( 15 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Area2D" parent="MainMenu/HBoxContainer/CenterContainer" instance=ExtResource( 16 )]
position = Vector2( 442.063, 25.7755 )
script = ExtResource( 17 )
next_world = "res://Game/World.tscn"

[node name="Label" type="Label" parent="."]
margin_left = 640.897
margin_top = 389.932
margin_right = 737.897
margin_bottom = 431.932
custom_fonts/font = SubResource( 2 )
text = "Daniella e Miguel"
[connection signal="focus_entered" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/NewGameButton" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/NewGameButton" method="_on_NewGameButton_focus_entered"]
[connection signal="mouse_entered" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/NewGameButton" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/NewGameButton" method="_on_NewGameButton_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/NewGameButton" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/NewGameButton" method="_on_NewGameButton_mouse_exited"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/NewGameButton" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/NewGameButton" method="_on_Button_pressed"]
[connection signal="focus_entered" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/LevelSelection" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/LevelSelection" method="_on_LevelSelection_focus_entered"]
[connection signal="mouse_entered" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/LevelSelection" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/LevelSelection" method="_on_LevelSelection_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/LevelSelection" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/LevelSelection" method="_on_LevelSelection_mouse_exited"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/LevelSelection" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/LevelSelection" method="_on_LevelSelection_pressed"]
[connection signal="focus_entered" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/CreditsButton" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/CreditsButton" method="_on_OptionsButton_focus_entered"]
[connection signal="mouse_entered" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/CreditsButton" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/CreditsButton" method="_on_CreditsButton_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/CreditsButton" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/CreditsButton" method="_on_CreditsButton_mouse_exited"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/CreditsButton" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/CreditsButton" method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/QuitGame" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/QuitGame" method="_on_QuitGame_focus_entered"]
[connection signal="mouse_entered" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/QuitGame" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/QuitGame" method="_on_QuitGame_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/QuitGame" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/QuitGame" method="_on_QuitGame_mouse_exited"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/Menu Options/QuitGame" to="MainMenu/HBoxContainer/VBoxContainer/Menu Options/QuitGame" method="_on_QuitGame_pressed"]
